# baitap-c

./: CMakeLists.txt  Mai_xem.c  Nhap_xuat_mang_2_chieu_trong_c.c  PTIT_KS2023A_PhanNhutHao_de1.c  PTIT_KS2023S_PHANNHUTHAO_de1.c  PTIT_KS2023S_PHANNHUTHAO_de1_hackathon_02.c  baitap2f.c  baitap4f.c  docghifile1.c  docghifile2.c  dsgs.c  laygiatritrongmangcuaphantu.c  nhap_thong_tin_sinh_vien.c  project.c  tegd.c  test 4.c  test.c  test1.c  test2.c  test3.c  test4.c  tinhchuoikitu.c  tinhtong.c  ve_nha_on_lai.c
BaitapHTML/session 1/: baitap1.html  baitap3.html  baitap4.html  baitap5.html
BaitapHTML/session 17/: baitap.css  baitap.html
BaitapHTML/session 2/: baitap1.html  baitap3.html
BaitapHTML/session 3/: CV.css  CVcanhan.html  danhsachnghenhac.html
BaitapHTML/session 4/: Sử dụng css transform và animations.html  mau.css
BaitapHTML/session 5/: bake.css  banhkeo.css  bestbakehere.html  layout_bánh_kẹo.html
BaitapHTML/session 6/: Nháp.html  nhap.css
Lam_bai_tap/: baitap1.c  baitap2.c  baitap3.c  baitap4.c
Nhap/: test3.c
PTIT_KS_PhanNhutHao_de3/: PTIT_KS_PhanNhutHao.html  bai.css  kiemtra.css
javascript/: nhap.js  nháp.html
javascript/session 21/: baitap1.html  baitap1.js  baitap2.html  baitap2.js  baitap3.html  baitap3.js  baitap4.html  baitap4.js  baitap5.html  baitap5.js  cân_nặng.js  đo_cân_nặng.html
javascript/session 22/: baitap1.html  baitap2.html  baitap3.html  baitap4.html  bt1.js  bt2.js  bt3.js  bt4.js  fincobal.js  nhapsonguyenduong.html
javascript/session 24/: baitap1.html  baitap2.html  baitap3.html  baitap4.html  baitap5.html  bt1.js  bt2.js  bt3.js  bt4.js  bt5.js  fincobal.js  nhapsonguyenduong.html  số_đảo_ngược.html  đảo_ngược.js
javascript/session 25/: baitap1.html  baitap2.html  baitap3.html  baitap4.html  baitap5.html  baitap5_Đảo_Ngược.html  bt1.js  bt2.js  bt3.js  bt4.js  bt5.js
session 1/: baitap2.html
session 10/: baitap1.c  baitap2.c  baitap3.c
session 12/: baitap1.c  baitap2.c
session 13/: baitap1.c  baitap2.c  baitap3.c
session 14/: baitap1.c  baitap2.c  baitap3.c
session 2/: baitap2.html  baitap3.html
session 23/: baitapstruct.c
session 5/: baitap1.c  baitap2.c  baitap3.c  baitap5.c
session 6/: baitap1.c  baitap2.c
session 7/: baitajp3.c  baitap2.c
session 8/: baitap1.c  baitap2.c  baitap3.c
session 9/: baitap1.c  baitap2.c
session2/: baitap1.c
session3/: baitap3.c  baitap4.c  baitap5.c
session4/: baitap1.c  baitap3.c  baitap4.c
(+11 files in other folders)
