cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled
        baitap2f.c
        baitap4f.c
        test.c
        session2/baitap1.c
        session3/baitap3.c
        session3/baitap4.c
        session3/baitap5.c
        session4/baitap1.c
        session4/baitap3.c
        session4/baitap5.c
        tegd.c
)
