cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled
        baitap2f.c
        baitap4f.c
        tinhtong.c
        session2/baitap1.c
        session3/baitap3.c
        session3/baitap4.c
        session3/baitap5.c
        session4/baitap1.c
        session4/baitap3.c
        session4/baitap5.c
        tegd.c
        session4/baitap4.c
        "session 6/baitap1.c"
        "session 5/baitap5.c"
        "session 5/baitap1.c"
        "session 5/baitap2.c"
        "session 5/baitap3.c"
        "session 6/baitap2.c"
)
