cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled
        baitap2f.c
        baitap4f.c
        tinhtong.c
        session2/baitap1.c
        session3/baitap3.c
        session3/baitap4.c
        session3/baitap5.c
        session4/baitap1.c
        session4/baitap3.c
        session4/baitap5.c
        tinhchuoikitu.c
        session4/baitap4.c
        "session 6/baitap1.c"
        "session 5/baitap5.c"
        "session 5/baitap1.c"
        "session 5/baitap2.c"
        "session 5/baitap3.c"
        "session 6/baitap2.c"
        "session 7/baitajp3.c"
        "session 7/baitap2.c"
        2344.cpp
        Nhapxuatmang2chieutrongc.c
        "session 8/baitap1.c"
        "session 8/baitap2.c"
        "session 8/baitap3.c"
        laygiatritrongmangcuaphantu.c
        "session 9/baitap1.c"
        "session 9/baitap2.c"
        test.c
        Mai_xem.c
        test3.c
        test4.c
        "session 12/baitap1.c"
        "session 12/baitap2.c"
        "session 14/baitap1.c"
        "session 14/baitap2.c"
        "session 10/baitap1.c"
        "session 10/baitap2.c"
        "session 10/baitap3.c"
        ve_nha_on_lai.c
        PTIT_KS2023A_PhanNhutHao_de1.c
        "session 14/baitap3.c"
        "session 13/baitap1.c"
        test1.c
        "session 13/baitap2.c"
        "session 13/baitap3.c"
)
